[package]
name = "svm-peval"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# The IR definition this pass transforms.
svm-ir.workspace = true
# Per-SSA-value types (`func_value_types`): needed to type the caller values threaded across an
# inlined call boundary when a dynamic-control-flow callee is specialized into residual blocks.
svm-verify.workspace = true
# `sqrt`/`ceil`/`floor`/`trunc`/round-ties-even/`fma` are `std`-only float methods (they need libm).
# Since this crate is `no_std` (to compile to svm-IR), the float folds route through `libm` instead.
# These are correctly-rounded IEEE ops, so libm is bit-identical to the `std` methods the interpreter
# uses (verified by the differential harness). Pure Rust, so it translates through the on-ramp too.
libm = "0.2"

[dev-dependencies]
# The differential harness: re-verify the optimized module, then run original vs
# optimized through the reference interpreter and assert byte-identical results/traps.
svm-verify.workspace = true
svm-interp.workspace = true
# The AOT pipeline proof (tests/aot.rs): serialize a residual to bytes and back, and
# compile it to native code — the "ship a specialized artifact" path.
svm-encode.workspace = true
svm-jit.workspace = true
