[package]
name = "svm-run"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# The embedding runtime: instantiate a verified module with the MVP powerbox (§3e) and run it
# on the Cranelift JIT. Pulls in `svm-jit` (Cranelift), so it is kept *out* of the light `svm`
# umbrella crate — the same split as `bench/`, but in-workspace (Cranelift is already a
# workspace build cost via `svm-jit`, so this adds no new heavy dependency).

[lib]
name = "svm_run"
path = "src/lib.rs"

[[bin]]
name = "svm-run"
path = "src/main.rs"

[dependencies]
svm-ir.workspace = true
svm-text.workspace = true
svm-encode.workspace = true
svm-verify.workspace = true
svm-interp.workspace = true
svm-jit.workspace = true

[target.'cfg(unix)'.dependencies]
# Real `map`/`unmap`/`protect` for the Memory capability (§3e): `mprotect` on the JIT window
# pages, mirrored by a software page-state map (so cap-buffer borrows fail closed rather than
# faulting the host). Unix-only, like the JIT's guard page itself (`svm-jit` is unix-only).
libc = "0.2"
