[package]
name = "svm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Intentionally dependency-free (no criterion etc.) to keep build times low and the
# TCB auditable. The benchmark harness uses only std (src/bin/bench.rs).
[dependencies]
svm-ir.workspace = true
svm-text.workspace = true
svm-encode.workspace = true
svm-verify.workspace = true
svm-interp.workspace = true

[[bin]]
name = "svm-bench"
path = "src/bin/bench.rs"

# The Cranelift JIT is pulled in only for the differential tests (§18), so it stays
# out of the umbrella crate's normal build and the auditable dependency-free core.
[dev-dependencies]
svm-jit.workspace = true
# The embedding runtime — its `cap_thunk` (JIT CapThunk → reference-Host bridge) is shared by
# the C-frontend differential tests instead of a copy-pasted local one.
svm-run = { path = "../svm-run" }
# For the JIT-side `mprotect`-backed Memory-capability test harness (real page protection on
# the guest window, mirroring the interpreter's page-protection model). Unix-only test.
libc = "0.2"
