[package]
name = "wasmtime-bench"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone (the repo workspace excludes `bench/`), so this fetches/builds Wasmtime independently.
[workspace]

[dependencies]
wasmtime = { version = "45", default-features = false, features = ["cranelift", "runtime"] }

[profile.release]
opt-level = 3
